# esp-now-hub

./: .gitignore  Dockerfile  LICENSE  README.md  deploy.bash  flash.bash  pyproject.toml
.github/workflows/: publish-docker.yml  test.yml
esp_now_hub/hub/: boot.py  config.py  esp_now.py  main.py  mqtt.py  wifi.py
esp_now_hub/sensors/: aht20.py  bmp280.py  boot.py  boot_test.py  config.py  main.py  main_test.py  ms5540c.py  ms5803.py  setup.py  value_cache.py
scripts/: flash.bash  update_config.bash
tests/: conftest.py
tests/hub/: test_esp_now.py  test_mqtt.py
tests/sensors/: test_bmp280.py  test_ms5540c.py  test_ms5803.py  test_value_cache.py
