[project]
name = "esp_now_hub"
version = "1.0.0"
description = "Firmware for creating a network of devices sending data to MQTT, proxied through ESP-NOW."
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Gabriel Pajot", email = "gab@lescactus.eu" }
]
urls = { repository = "https://github.com/gpajot/esp-now-hub" }
dependencies = []
license-files = ["LICENSE"]

[dependency-groups]
dev = [
    "pytest ==8.4.2",
    "pytest-mock ==3.15.1",
    "ruff ==0.13.3",
    "mypy ==1.18.2",
    "pre-commit ==4.3.0",
    "micropython-esp32-esp32_generic-stubs ==1.26.0.post1",
    "mpremote ==1.26.1",
    "esptool ==5.1.0",
    "mpy-cross ==1.26.1.post2",
]

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "PT"]
ignore = ["E501"]
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
install_types = true
non_interactive = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
build-backend = { module-name = "esp_now_hub", module-root = "" }

[build-system]
requires = ["uv_build>=0.8.15,<0.9"]
build-backend = "uv_build"
