[project]
name = "esp_now_hub"
version = "1.0.1"
description = "Firmware for creating a network of devices sending data to MQTT, proxied through ESP-NOW."
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Gabriel Pajot", email = "gab@lescactus.eu" }
]
urls = { repository = "https://github.com/gpajot/esp-now-hub" }
dependencies = []
license-files = ["LICENSE"]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "pytest-mock ==3.15.1",
    "ruff==0.15.18",
    "pre-commit==4.6.0",
    "micropython-esp32-esp32_generic-stubs==1.28.0.post4",
    "mpremote==1.28.0",
    "esptool==5.3.1",
    "mpy-cross ==1.27.0.post2",
    "ty==0.0.55",
]

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "PT", "RUF", "UP"]
ignore = ["E501", "RUF001"]
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.pytest]
testpaths = ["tests"]

[tool.uv]
build-backend = { module-name = "esp_now_hub", module-root = "" }

[tool.ty.rules]
unused-ignore-comment = "warn"

[tool.ty.terminal]
error-on-warning = true

[build-system]
requires = ["uv_build>=0.11.26,<0.12"]
build-backend = "uv_build"
